feat: getActivePrice use case implementation
